Opened 4 years ago

Closed 4 years ago

#16679 closed bug (fixed)

Crash - Input Preferences

Reported by: thaflo Owned by: PreetpalKaur
Priority: normal Milestone: R1/beta3
Component: Preferences/Input Version: R1/beta2
Keywords: Cc:
Blocked By: Blocking:
Platform: arm

Description

Continuing a VirtualBox Instance of Haiku 5479 Input Preferences crashes.

Attachments (1)

Input-1839-debug-19-12-2020-21-07-06.report (8.9 KB ) - added by thaflo 4 years ago.

Download all attachments as: .zip

Change History (6)

comment:1 by thaflo, 4 years ago

replicable

not on arm of course, x86 64 bit, latest release.

comment:2 by nephele, 4 years ago

I think this is unrelated to virtualbox, pluging in a keyboard or a mouse and unplugging it while the panel is open crashes for me aswell in a similar report.

comment:3 by madmax, 4 years ago

Indeed, a bug in the Input preferences window. Proposed fix: https://review.haiku-os.org/c/haiku/+/3540

comment:4 by nephele, 4 years ago

+1 Your patchset 1 fixes the issue for my (can't review on gerrit unfortunately)

comment:5 by pulkomandy, 4 years ago

Milestone: UnscheduledR1/beta3
Resolution: fixed
Status: newclosed

Patch applied in hrev54809.

Note: See TracTickets for help on using tickets.