Input preferences: fix list item retrieval

Fixes #16679

Change-Id: I87844b7745dc2d9e126983a888caf01f37f6b742